# rookdb-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: db.rs  main.rs
